[package]
name = "tblreader"
version = "0.1.0"
authors = ["louchenyao <louchenyao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro=true

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
